# VRLifeTime

./: .gitignore  .vscodeignore  install_backend.sh  package-lock.json  package.json  readme.md
backend/lifetime_query/: .gitignore  Cargo.toml  README.md  query.sh  run.sh
backend/lifetime_query/src/: db.rs  main.rs
backend/lifetime_query/src/lifetime_visualizer/: callgraph.rs  collector.rs  genkill.rs  info.rs  mod.rs  range.rs
backend/rust-lock-bug-detector/: .gitignore
backend/rust-lock-bug-detector/examples/: .detect.log.swp
src/: extension.ts
