[package]
name = "vrlifetime-backend"
version = "0.1.0"
authors = ["BurtonQin <bobbqqin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "vrlifetime-backend"
path = "src/main.rs"

[[bin]]
name = "vrlifetime-query"
path = "src/bin/query.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

